tests/integration_tests/snapshots/integration__integration_tests__git_error_display__detached_head.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mCannot merge: not on a branch (detached HEAD)[39m

💡 [2mTo switch to a branch, run [90mgit switch <branch>[39m[22m
