tests/integration_tests/snapshots/integration__integration_tests__git_error_display__merge_commits_found.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mFound merge commits in push range[39m

💡 [2mTo push non-linear history, run [90mwt merge --allow-merge-commits[39m[22m
