tests/integration_tests/snapshots/integration__integration_tests__git_error_display__worktree_path_exists.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mDirectory already exists: [1m/tmp/repo.feature[22m[39m

💡 [2mTo remove manually, run [90mrm -rf /tmp/repo.feature[39m; to retry with backup, run [90mwt switch feature --clobber[39m[22m
